# ACC_Insight

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cicd.yml  rust.yml
Driver Client/: Cargo.toml
Driver Client/src/: main.rs
Server/: Cargo.toml
Server/src/: acc_memory_reader.rs  main.rs  shared_file_out.rs
acc_lib/: Cargo.toml
acc_lib/src/: lib.rs  shared_file_out.rs
driver_client/: Cargo.toml
driver_client/src/: acc_memory_reader.rs  connection.rs  main.rs
manager_client/: Cargo.toml
manager_client/src/: connection.rs  main.rs
p2p_lib/: Cargo.toml
socket_lib/: Cargo.toml
socket_lib/src/: lib.rs  server.rs
