[package]
name = "acc_lib"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.42.0"
features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug"]
[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = { version = "0.3", features = ["const-generics"] }
widestring = "1.1.0"